--- a/index.html
+++ b/index.html
@@ -46,11 +46,51 @@
 
 <h1><code>C(I|D)</code></h1>
 
-<h2>Continuous Integration and Deployment</h2>
+<h2>Continuous Integration and Delivery</h2>
 
 <h2>Brian Besmanoff</h2>
 
 <p><img class="emoji" alt=":octocat:" src="https://assets-cdn.github.com/images/icons/emoji/octocat.png"> <a href="https://github.com/bbesmanoff" class="user-mention">@bbesmanoff</a></p>
+
+</section>
+<section>
+
+<h2>Real Talk</h2>
+
+<p>This talk contains my own ideas.</p>
+
+<p><em>My own meaning it doesn't represent any product/service/company/etc.</em></p>
+
+</section>
+<section>
+
+<h2>Definitions</h2>
+
+</section>
+<section>
+
+<h2>Continuous Integration</h2>
+
+<blockquote>
+<p>Continuous Integration is a software development practice where members of a
+team integrate their work frequently, usually each person integrates at least
+daily</p>
+
+<p>--<a href="http://martinfowler.com/articles/continuousIntegration.html">Martin Fowler</a></p>
+</blockquote>
+
+</section>
+<section>
+
+<h2>Continuous Delivery</h2>
+
+<blockquote>
+<p>Continuous delivery is a software development methodology where the release
+process is automated. Every software change is automatically built, tested,
+and deployed to production</p>
+
+<p>--<a href="http://docs.aws.amazon.com/codepipeline/latest/userguide/concepts.html#concepts-continuous-delivery-integration">AWS CodeDeploy</a></p>
+</blockquote>
 
 </section>
 
